// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_getSubtreeCommitList it returns a list of commits with metadata 1`] = `
"----node
5b29789a9466344f070ddc482eea7855d607dbf0
----p1node
c42dae43c973a141cf0f15d9bcb6f32093e1c1d2
----current
----phase
draft
----file_adds
files/file2.txt
files/file3.txt
files/file4.txt
----file_copies
files/file.txt
files/file2.txt
files/file.txt
files/file3.txt
files/file.txt
files/file4.txt
----file_dels
----file_mods
files/file.txt
----node
6af7dc9d47853ed9ad52864819055d46e67733a3
----p1node
5b29789a9466344f070ddc482eea7855d607dbf0
----current
----phase
draft
----file_adds
----file_copies
----file_dels
----file_mods
files/file.txt
----node
f670616d11764c7b0869c1fe769423e8cd71c537
----p1node
5b29789a9466344f070ddc482eea7855d607dbf0
----current
1
----phase
draft
----file_adds
files/file5.txt
----file_copies
files/file4.txt
files/file5.txt
----file_dels
----file_mods
files/file.txt
----node
9effd4875962da91de5c2247f9c4c5a4cf0031f6
----p1node
f670616d11764c7b0869c1fe769423e8cd71c537
----current
----phase
draft
----file_adds
----file_copies
----file_dels
----file_mods
files/file.txt
----node
c42dae43c973a141cf0f15d9bcb6f32093e1c1d2
----p1node
bf2cf6e87a72ec7062e38e695bfb1151a4f63a9e
----current
----phase
public
----file_adds
files/file.txt
----file_copies
----file_dels
----file_mods
"
`;

exports[`_parseSubtreeCommitList it returns a set of commits 1`] = `
Set {
  Object {
    "addedFiles": Set {},
    "copiedFiles": Set {},
    "deletedFiles": Set {},
    "hash": "47b65c76f24ae1897b7f54dca6a2d210caf78ec5",
    "isCurrentRevision": false,
    "modifiedFiles": Set {
      "files/file.txt",
    },
    "parentHash": "c42dae43c973a141cf0f15d9bcb6f32093e1c1d2",
    "phase": "draft",
  },
  Object {
    "addedFiles": Set {},
    "copiedFiles": Set {},
    "deletedFiles": Set {},
    "hash": "6cc8d78c03a1ec393229a4d93fd013ca68baf2d7",
    "isCurrentRevision": false,
    "modifiedFiles": Set {
      "files/file.txt",
    },
    "parentHash": "47b65c76f24ae1897b7f54dca6a2d210caf78ec5",
    "phase": "draft",
  },
  Object {
    "addedFiles": Set {},
    "copiedFiles": Set {},
    "deletedFiles": Set {},
    "hash": "19e0c8a7e1c0ff0099e0c642ea99cdba36e36923",
    "isCurrentRevision": true,
    "modifiedFiles": Set {
      "files/file.txt",
    },
    "parentHash": "47b65c76f24ae1897b7f54dca6a2d210caf78ec5",
    "phase": "draft",
  },
  Object {
    "addedFiles": Set {},
    "copiedFiles": Set {},
    "deletedFiles": Set {},
    "hash": "260b695f01aa8d351bcda32830c174d8550cbfa1",
    "isCurrentRevision": false,
    "modifiedFiles": Set {
      "files/file.txt",
    },
    "parentHash": "19e0c8a7e1c0ff0099e0c642ea99cdba36e36923",
    "phase": "draft",
  },
  Object {
    "addedFiles": Set {
      "files/file.txt",
    },
    "copiedFiles": Set {},
    "deletedFiles": Set {},
    "hash": "c42dae43c973a141cf0f15d9bcb6f32093e1c1d2",
    "isCurrentRevision": false,
    "modifiedFiles": Set {},
    "parentHash": "bf2cf6e87a72ec7062e38e695bfb1151a4f63a9e",
    "phase": "public",
  },
}
`;

exports[`getSubtree 1`] = `
Object {
  "addedFiles": Set {},
  "children": Array [
    Object {
      "addedFiles": Set {
        "files/file2.txt",
        "files/file3.txt",
        "files/file4.txt",
      },
      "children": Array [
        Object {
          "addedFiles": Set {},
          "children": Array [],
          "copiedFiles": Set {},
          "deletedFiles": Set {},
          "hash": "6af7dc9d47853ed9ad52864819055d46e67733a3",
          "isCurrentRevision": false,
          "modifiedFiles": Set {
            "files/file.txt",
          },
          "parent": [Circular],
          "parentHash": "5b29789a9466344f070ddc482eea7855d607dbf0",
          "phase": "draft",
        },
        Object {
          "addedFiles": Set {
            "files/file5.txt",
          },
          "children": Array [
            Object {
              "addedFiles": Set {},
              "children": Array [],
              "copiedFiles": Set {},
              "deletedFiles": Set {},
              "hash": "9effd4875962da91de5c2247f9c4c5a4cf0031f6",
              "isCurrentRevision": false,
              "modifiedFiles": Set {
                "files/file.txt",
              },
              "parent": [Circular],
              "parentHash": "f670616d11764c7b0869c1fe769423e8cd71c537",
              "phase": "draft",
            },
          ],
          "copiedFiles": Set {
            Object {
              "dest": "files/file5.txt",
              "source": "files/file4.txt",
            },
          },
          "deletedFiles": Set {},
          "hash": "f670616d11764c7b0869c1fe769423e8cd71c537",
          "isCurrentRevision": true,
          "modifiedFiles": Set {
            "files/file.txt",
          },
          "parent": [Circular],
          "parentHash": "5b29789a9466344f070ddc482eea7855d607dbf0",
          "phase": "draft",
        },
      ],
      "copiedFiles": Set {
        Object {
          "dest": "files/file2.txt",
          "source": "files/file.txt",
        },
        Object {
          "dest": "files/file3.txt",
          "source": "files/file.txt",
        },
        Object {
          "dest": "files/file4.txt",
          "source": "files/file.txt",
        },
      },
      "deletedFiles": Set {},
      "hash": "5b29789a9466344f070ddc482eea7855d607dbf0",
      "isCurrentRevision": false,
      "modifiedFiles": Set {
        "files/file.txt",
      },
      "parent": [Circular],
      "parentHash": "c42dae43c973a141cf0f15d9bcb6f32093e1c1d2",
      "phase": "draft",
    },
  ],
  "copiedFiles": Set {},
  "deletedFiles": Set {},
  "hash": "c42dae43c973a141cf0f15d9bcb6f32093e1c1d2",
  "isCurrentRevision": false,
  "modifiedFiles": Set {},
  "parent": null,
  "parentHash": "bf2cf6e87a72ec7062e38e695bfb1151a4f63a9e",
  "phase": "public",
}
`;
